# pynetflix

./: README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py
pynetflix/: __init__.py  main.py  static.py
src/pynetflix/: configs.py
